--- a/manuscript/manuscript.html
+++ b/manuscript/manuscript.html
@@ -8,7 +8,7 @@
 
 <meta name="author" content="Grzegorz Sapijaszko">
 
-<title>Highways width</title>
+<title>Highways width based on LIDAR data</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -81,7 +81,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Highways width</h1>
+<h1 class="title">Highways width based on LIDAR data</h1>
 </div>
 
 
